--- a/src/app/features/plan-detail/pages/home-plan-detail/home-plan-detail.component.html
+++ b/src/app/features/plan-detail/pages/home-plan-detail/home-plan-detail.component.html
@@ -1,13 +1,15 @@
 <div class="home-plan-detail-container">
-  <div class="mb-6">
+  <div class="mb-4 flex justify-between">
     <button mat-icon-button (click)="goBackToPlans()">
       <mat-icon>arrow_back</mat-icon>
     </button>
+
   </div>
 
   <app-plan-card-detail-list
     [planId]="planId()"
     (planDetailSelected)="onPlanDetailSelected($event)"
-    (chapterMarkedAsRead)="onChapterMarkedAsRead($event)">
+    (chapterMarkedAsRead)="onChapterMarkedAsRead($event)"
+  >
   </app-plan-card-detail-list>
 </div>
