--- a/src/app/core/components/toolbar-up/toolbar-up.component.html
+++ b/src/app/core/components/toolbar-up/toolbar-up.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <div class="flex justify-around items-center w-full">
+  <div class="flex justify-between items-center w-full">
     <span class="text-3xl font-medium">
       <mat-icon>local_library</mat-icon> Track Book
     </span>
